2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test (pop3-0.8): Modified the test case matching a bit to
	  handle the fact that under 8.6 a socket channel handle may
	  contain hex data after the general prefix, instead of just
	  digits.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2011-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Fixed tests results to list the new options.
	* pop3.tcl: Fixed issue with closing during open introduced by the
	  patch. When a connect error occurs we cannot send a QUIT any
	  longer, and have to close the socket directly.

2011-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.tcl: Extended package with STARTTLS support provided by
	* pop3.man: Pascal Scheffers. This switches a regular connection
	* pkgIndex.tcl: over to SSL/TLS. Version bumped to 1.8.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* pop3.test: Moved the dialog setup for test pop3-7.0 into the
	  test, to ensure that it is not run if TLS is not available.

2009-04-13  Andreas Kupries  <andreask@activestate.com>

	* pop3.tcl (::pop3::open): Extended to accept a new option
	* pop3.man: -socketcmd, through which the user can override the
	* pop3.test: way the connection is opened. Primary use is securing
	* pkgIndex.tcl: of the connection via SSL (package tls, command
	  tls::socket). Updated documentation. Extended testsuite. Bumped
	  package version to 1.7.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 
