@@ -1,3 +1,9 @@
+2011-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pop3.test (pop3-7.0): Updated for additional configure options
+	  returned by peek, plus same change to the socket handle handling
+	  as for pop3-0.8, see below.
+
 2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* pop3.test (pop3-0.8): Modified the test case matching a bit to
